fix nav height on mobile

--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -20,6 +20,7 @@ nav {
     align-items: center;
     justify-content: flex-start;
     padding-left: 0;
+    height: 90px;
   }
 
   svg#logo {
